minio/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    name: minio
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    name: test
